chang dacheng page

--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
 				<a class="dacheng btn btn-default" href="./dacheng.html" target="_blank"> 点击获取二维码</a>
 			</div>
 		</div>
-		<h1 class="guanzhu">关注我们</h1>
-		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
+		<!-- <h1 class="guanzhu">关注我们</h1>
+		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div> -->
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
