change dacheng page

--- a/dacheng.html
+++ b/dacheng.html
@@ -13,13 +13,16 @@
 		.body{
 			position:relative;
 		}
+		.header{
+			margin-bottom:180px;
+		}
+		.header-cont{
+			width:1000px;
+		}
 		.personal{
-			position:absolute;
-			top:50%;
-			left:50%;
-			margin-top:-112px;
-			margin-left:-250px;
 			width:500px;
+			height:320px;
+			margin:0 auto;
 		}
 		.personal .erweima{
 			float:left;
@@ -47,12 +50,8 @@
 			text-align: center;
 		}
 		.scrolltext{
-			position:absolute;
-			left:50%;
-			bottom:100px;
 			width:900px;
 			margin:0 auto;
-			margin-left:-450px;
 			height:40px;
 			line-height: 40px;
 			border:1px solid #eee;
