change as article_list

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li><a href="./list.html" target="_blank">往期回顾</a></li>
+				<li><a href="./article_list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li class="active"><a href="./about.html" target="_blank">关于我们</a></li>
 				<li><a href="./message.html" target="_blank">留言板</a></li>
@@ -36,7 +36,7 @@
 				<p>公号网址：<a href="http://www.huandoo.cn" target="_blank">www.huandoo.cn</a></p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>个人微信：Whia2021</p>
-				<a class="dacheng btn btn-default" href="./dacheng.html" target="_blank"> 点击获取二维码</a>
+				<a class="dacheng btn btn-default" href="./guanzhu.html" target="_blank"> 点击获取平台二维码</a>
 			</div>
 		</div>
 		<!-- <h1 class="guanzhu">关注我们</h1>
