--- a/guanzhu.html
+++ b/guanzhu.html
@@ -52,6 +52,7 @@
 		.scrolltext{
 			width:900px;
 			margin:0 auto;
+			margin-bottom:166px;
 			height:40px;
 			line-height: 40px;
 			border:1px solid #eee;
@@ -67,7 +68,7 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li><a href="./list.html" target="_blank">往期回顾</a></li>
+				<li><a href="./article_list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li><a href="./about.html" target="_blank">关于我们</a></li>
 				<li><a href="./message.html" target="_blank">留言板</a></li>
@@ -92,6 +93,13 @@
        <marquee behavior="alternate" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >如果你也是一名文字发烧友，关注我们不后悔。等你来！</marquee> 
     </div>
     <!--scrolltext  end-->
+
+    <!-- footer begin -->
+	<div class="footer">
+		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
+		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
+	</div>
+	<!-- footer end -->
 
 </body>
 </html>
