--- a/message.html
+++ b/message.html
@@ -42,7 +42,7 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li><a href="./list.html" target="_blank">往期回顾</a></li>
+				<li><a href="./article_list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li><a href="./about.html" target="_blank">关于我们</a></li>
 				<li class="active"><a href="./message.html" target="_blank">留言板</a></li>
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<div class="message-box">
-		<h1>如果您对于我们平台有好的建议或想法，“还读我诗 团队”欢迎您在下方留言：</h1>
+		<h1>如果您对于我们平台有好的建议或想法，欢迎您在下方留言：</h1>
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
 		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
