--- a/article_list.html
+++ b/article_list.html
@@ -19,7 +19,7 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li class="active"><a href="./list.html" target="_blank">往期回顾</a></li>
+				<li class="active"><a href="./article_list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li><a href="./about.html" target="_blank">关于我们</a></li>
 				<li><a href="./message.html" target="_blank">留言板</a></li>
