about page add weixin_logo

--- a/about.html
+++ b/about.html
@@ -37,11 +37,11 @@
 				<p>公号网址：<a href="http://www.huandoo.cn" target="_blank">www.huandoo.cn</a></p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>个人微信：Whia2021</p>
-				<a class="dacheng btn btn-default" href="./guanzhu.html" target="_blank"> 点击获取平台二维码</a>
+				<!-- <a class="dacheng btn btn-default" href="./guanzhu.html" target="_blank"> 点击获取平台二维码</a> -->
 			</div>
 		</div>
-		<!-- <h1 class="guanzhu">关注我们</h1>
-		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div> -->
+		<h1 class="guanzhu">关注我们</h1>
+		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
@@ -51,6 +51,7 @@
 	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
+	<div class="weixin"><a href="./guanzhu.html"><img src="./images/weixin.png" alt=""></a></div>
 
 	<script src="./js/totop.js"></script>
 	<script src="./js/bdtj.js"></script>
