college page add dongdong

--- a/college.html
+++ b/college.html
@@ -42,6 +42,23 @@
 			font-size:40px;
 			color:#ff8c69;
 		}
+		.cont .person{
+			margin:0 auto;
+			margin-bottom:10px;
+			width:200px;
+			height:200px;
+			border:1px solid #ff8c69;
+		}
+		.cont .person img{
+			width:100%;
+			height:100%;
+			border:none;
+		}
+		.cont .dongdong{
+			margin-bottom:120px;
+			color:#999;
+			font-size:18px;
+		}
 	</style>
 </head>
 <body>
@@ -67,6 +84,9 @@
 			<p class="text bt">huanduwoshi2016@126.com</p>
 			<p class="title">联系方式</p>
 			<p class="text">Liyufeng5658(个人微信)</p>
+			<p style="margin-bottom:10px;font-size:24px;">或者联系栋栋</p>
+			<div class="person"><img src="./images/per_dongdong.jpg" alt=""></div>
+			<p class="dongdong">微信扫一扫，加栋栋好友</p>
 		</div>
 	</div>
 	<!-- footer begin -->
