college page add dongdong weixin

--- a/college.html
+++ b/college.html
@@ -84,7 +84,8 @@
 			<p class="text bt">huanduwoshi2016@126.com</p>
 			<p class="title">联系方式</p>
 			<p class="text">Liyufeng5658(个人微信)</p>
-			<p style="margin-bottom:10px;font-size:24px;">或者联系栋栋</p>
+			<p class="text">YD13772059510(个人微信)</p>
+			<p style="margin-bottom:10px;font-size:24px;">也可扫码添加</p>
 			<div class="person"><img src="./images/per_dongdong.jpg" alt=""></div>
 			<p class="dongdong">微信扫一扫，加栋栋好友</p>
 		</div>
