change guanzhu page
change words

--- a/guanzhu.html
+++ b/guanzhu.html
@@ -80,11 +80,11 @@
 	<div class="personal clearfix">
 		<div class="erweima">
 			<img src="./images/erweima.jpg" alt="">
-			<p class="text">扫一扫，关注我们</p>
+			<p class="text">微信扫一扫，关注我们</p>
 		</div>
 		<div class="erweima dacheng">
 			<img src="./images/dacheng.jpg" alt="">
-			<p class="text">扫一扫，加我微信</p>
+			<p class="text">微信扫一扫，加我好友</p>
 		</div>
 	</div>
 	<!-- erweima-cont end -->
