--- a/college.html
+++ b/college.html
@@ -12,16 +12,24 @@
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<style>
 		body{
+			/*background: url(./images/college_bg.jpg) no-repeat 100% 100% !important;*/
 			background: #fff;
 		}
 		.header-cont{
 			width:1000px;
+		}
+		.box{
+			padding:120px 0;
+			width:100%;
+			background: url(./images/college_bg.jpg) no-repeat 100% 100%;
+			background-size: cover;
 		}
 		.cont{
 			margin:0 auto;
 			width:1000px;
 			min-height: 650px;
 			color:#999;
+			color:#fff;
 			text-align: center;
 			word-spacing: 200px;
 		}
@@ -36,11 +44,13 @@
 		}
 		.cont .title{
 			color:#999;
+			color:#fff;
 			font-size:40px;
 		}
 		.cont .text{
 			font-size:40px;
 			color:#ff8c69;
+			color:#fff;
 		}
 		.cont .person{
 			margin:0 auto;
@@ -57,6 +67,7 @@
 		.cont .dongdong{
 			margin-bottom:120px;
 			color:#999;
+			color:#fff;
 			font-size:18px;
 		}
 	</style>
@@ -79,7 +90,8 @@
 	</div>
 	<div class="box">
 		<div class="cont">
-			<p class="zhengji">作品征集中</p>
+			<!-- <p class="zhengji">作品征集中</p> -->
+			<p class="zhengji">“稿”事情</p>
 			<p class="title">投稿邮箱</p>
 			<p class="text bt">huanduwoshi2016@126.com</p>
 			<p class="title">联系方式</p>
