add new article 53

--- a/college.html
+++ b/college.html
@@ -46,6 +46,15 @@
 			color:#999;
 			color:#fff;
 			font-size:40px;
+			margin-bottom:10px;
+		}
+		.cont .tiaojian{
+			width:800px;
+			margin:0 auto;
+			margin-bottom: 50px;
+			font-size:32px;
+			color:#fff;
+			/*text-align: left;*/
 		}
 		.cont .text{
 			font-size:40px;
@@ -54,6 +63,7 @@
 		}
 		.cont .person{
 			margin:0 auto;
+			margin-top:20px;
 			margin-bottom:10px;
 			width:200px;
 			height:200px;
@@ -91,13 +101,14 @@
 	<div class="box">
 		<div class="cont">
 			<!-- <p class="zhengji">作品征集中</p> -->
-			<p class="zhengji">“稿”事情</p>
+			<p class="zhengji">“稿”事情啦</p>
+			<p class="title">投稿须知</p>
+			<p class="tiaojian">稿件要求：主题、观点灵活鲜明，诗歌散文，小说等体裁皆可玩转，"稿"事情非你不可。</p>
 			<p class="title">投稿邮箱</p>
 			<p class="text bt">huanduwoshi2016@126.com</p>
 			<p class="title">联系方式</p>
 			<p class="text">Liyufeng5658(个人微信)</p>
 			<p class="text">YD13772059510(个人微信)</p>
-			<p style="margin-bottom:10px;font-size:24px;">也可扫码添加</p>
 			<div class="person"><img src="./images/per_dongdong.jpg" alt=""></div>
 			<p class="dongdong">微信扫一扫，加栋栋好友</p>
 		</div>
