--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="banner">
 		<div class="b-img">
 			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
-				<p class="text"><a href="http://mp.weixin.qq.com/s/tTgBU9rKjF9kfFsLrqTI1w" target="_blank">最近更新:《春天，一个有希望的男子》</a></p>
+				<p class="text"><a href="http://mp.weixin.qq.com/s/bs8nvqIBe2vfg4JII48RUg" target="_blank">最近更新:《他想起山茶花》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
 				<p class="text"><a href="./college.html" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
