chang collage page

--- a/college.html
+++ b/college.html
@@ -104,9 +104,8 @@
 			<p class="zhengji">“稿”事情啦</p>
 			<p class="title">投稿须知</p>
 			<p class="tiaojian">稿件要求：主题、观点灵活鲜明，诗歌散文，小说等体裁皆可玩转，"稿"事情非你不可。</p>
-			<p class="title">投稿邮箱</p>
-			<p class="text bt">huanduwoshi2016@126.com</p>
 			<p class="title">联系方式</p>
+			<p class="text">huanduwoshi2016@126.com(投稿邮箱)</p>
 			<p class="text">Liyufeng5658(个人微信)</p>
 			<p class="text">YD13772059510(个人微信)</p>
 			<div class="person"><img src="./images/per_dongdong.jpg" alt=""></div>
