--- a/message.html
+++ b/message.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>有话您就说，欢迎给予建议</title>
+	<title>留言板风里雨里等你来</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 	<meta name="keywords" content="" />
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<div class="message-box">
-		<h1>如果您对于我们平台有好的建议或想法，欢迎您在下方留言：</h1>
+		<h1>悄悄告诉你，留言区风里雨里等你留下芳踪噢：</h1>
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
 		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
