about page text change

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 		<h1>“还读我诗”团队</h1>
 		<div class="about">
 			<!-- <p>一群正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p> -->
-			<p>我有辣条和烈酒，你是否愿意跟我走</p>
+			<p>在坚硬的岁月里，写一首绵软的诗</p>
 		</div>
 		<h1>联系我们</h1>
 		<div class="msg clearfix">
