--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
 		</div>
 	</div>
 	<!-- cont-box end -->
+	<!-- bottom_nav begin -->
+	<div class="bottom_nav">
+		<a href="./index.html">首页</a> ｜ 
+		<a href="./article_list.html">往期回顾</a> ｜ 
+		<a href="./college.html">大学生专栏</a> ｜ 
+		<a href="./about.html">关于我们</a> ｜ 
+		<a href="./message.html">留言板</a>
+		<div class="friend_link">
+			友情公众号：<a href="http://mp.weixin.qq.com/s/kEtEO1l4QBK-VetMXsgrTw">草心阁</a>  |  
+			<a href="./about.html">联系合作</a>
+		</div>
+	</div>
+	<!-- bottom_nav end -->
 	<!-- footer begin -->
 	<div class="footer">
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
