--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
 		<a href="./about.html">关于我们</a> ｜ 
 		<a href="./message.html">留言板</a>
 		<div class="friend_link">
-			友情公众号：<a href="http://mp.weixin.qq.com/s/kEtEO1l4QBK-VetMXsgrTw">草心阁</a>  |  
+			<!-- 友情公众号：<a href="http://mp.weixin.qq.com/s/kEtEO1l4QBK-VetMXsgrTw">草心阁</a>  |   -->
+			友情公众号：<a href="javascript:;">友情1</a>  |  
+			<a href="javascript:;">友情2</a>  |  
+			<a href="javascript:;">友情3</a>  |   
 			<a href="./about.html">联系合作</a>
 		</div>
 	</div>
