--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li><a href="./article_list.html" target="_blank">往期回顾</a></li>
-				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
-				<li class="active"><a href="./about.html" target="_blank">关于我们</a></li>
-				<li><a href="./message.html" target="_blank">留言板</a></li>
+				<li><a href="./article_list.html">往期回顾</a></li>
+				<li><a href="./college.html">大学生专栏</a></li>
+				<li class="active"><a href="./about.html">关于我们</a></li>
+				<li><a href="./message.html">留言板</a></li>
 			</ul>
 		</div>
 	</div>
@@ -43,6 +43,15 @@
 		<h1 class="guanzhu">关注我们</h1>
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 	</div>
+	<!-- bottom_nav begin -->
+	<div class="bottom_nav">
+		<a href="./index.html">首页</a> ｜ 
+		<a href="./article_list.html">往期回顾</a> ｜ 
+		<a href="./college.html">大学生专栏</a> ｜ 
+		<a href="./about.html">关于我们</a> ｜ 
+		<a href="./message.html">留言板</a>
+	</div>
+	<!-- bottom_nav end -->
 	<!-- footer begin -->
 	<div class="footer">
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
