--- a/guanzhu.html
+++ b/guanzhu.html
@@ -68,10 +68,10 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li><a href="./article_list.html" target="_blank">往期回顾</a></li>
-				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
-				<li><a href="./about.html" target="_blank">关于我们</a></li>
-				<li><a href="./message.html" target="_blank">留言板</a></li>
+				<li><a href="./article_list.html">往期回顾</a></li>
+				<li><a href="./college.html">大学生专栏</a></li>
+				<li><a href="./about.html">关于我们</a></li>
+				<li><a href="./message.html">留言板</a></li>
 			</ul>
 		</div>
 	</div>
@@ -93,7 +93,15 @@
        <marquee behavior="alternate" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >如果你也是一名文字发烧友，关注我们不后悔。等你来！</marquee> 
     </div>
     <!--scrolltext  end-->
-
+	<!-- bottom_nav begin -->
+	<div class="bottom_nav">
+		<a href="./index.html">首页</a> ｜ 
+		<a href="./article_list.html">往期回顾</a> ｜ 
+		<a href="./college.html">大学生专栏</a> ｜ 
+		<a href="./about.html">关于我们</a> ｜ 
+		<a href="./message.html">留言板</a>
+	</div>
+	<!-- bottom_nav end -->
     <!-- footer begin -->
 	<div class="footer">
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
