--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li class="active"><a href="./index.html">首页</a></li>
-				<li><a href="./article_list.html" target="_blank">往期回顾</a></li>
-				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
-				<li><a href="./about.html" target="_blank">关于我们</a></li>
-				<li><a href="./message.html" target="_blank">留言板</a></li>
+				<li><a href="./article_list.html">往期回顾</a></li>
+				<li><a href="./college.html">大学生专栏</a></li>
+				<li><a href="./about.html">关于我们</a></li>
+				<li><a href="./message.html">留言板</a></li>
 			</ul>
 		</div>
 	</div>
@@ -113,13 +113,13 @@
 		<a href="./college.html">大学生专栏</a> ｜ 
 		<a href="./about.html">关于我们</a> ｜ 
 		<a href="./message.html">留言板</a>
-		<div class="friend_link">
-			<!-- 友情公众号：<a href="http://mp.weixin.qq.com/s/kEtEO1l4QBK-VetMXsgrTw">草心阁</a>  |   -->
+		<!-- <div class="friend_link">
+			友情公众号：<a href="http://mp.weixin.qq.com/s/kEtEO1l4QBK-VetMXsgrTw">草心阁</a>  |  
 			友情公众号：<a href="javascript:;">友情1</a>  |  
 			<a href="javascript:;">友情2</a>  |  
 			<a href="javascript:;">友情3</a>  |   
 			<a href="./about.html">联系合作</a>
-		</div>
+		</div> -->
 	</div>
 	<!-- bottom_nav end -->
 	<!-- footer begin -->
