--- a/guanzhu.html
+++ b/guanzhu.html
@@ -90,20 +90,21 @@
 	<!-- erweima-cont end -->
 	<!--scrolltext  begin-->
     <div class="scrolltext">
-       <marquee behavior="alternate" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >如果你也是一名文字发烧友，关注我们不后悔。等你来！</marquee> 
+       <marquee behavior="alternate" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >如果你也是一名文字发烧友，等你来！</marquee> 
     </div>
     <!--scrolltext  end-->
-	<!-- bottom_nav begin -->
-	<div class="bottom_nav">
-		<a href="./index.html">首页</a> ｜ 
-		<a href="./article_list.html">往期回顾</a> ｜ 
-		<a href="./college.html">大学生专栏</a> ｜ 
-		<a href="./about.html">关于我们</a> ｜ 
-		<a href="./message.html">留言板</a>
-	</div>
-	<!-- bottom_nav end -->
+	
     <!-- footer begin -->
 	<div class="footer">
+		<!-- bottom_nav begin -->
+		<div class="bottom_nav">
+			<a href="./index.html">首页</a> ｜ 
+			<a href="./article_list.html">往期回顾</a> ｜ 
+			<a href="./college.html">大学生专栏</a> ｜ 
+			<a href="./about.html">关于我们</a> ｜ 
+			<a href="./message.html">留言板</a>
+		</div>
+		<!-- bottom_nav end -->
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
