--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>关于我们</title>
+	<title>关于还读我诗</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 	<meta name="keywords" content="" />
@@ -29,7 +29,7 @@
 		<h1>“还读我诗”团队</h1>
 		<div class="about">
 			<!-- <p>一群正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p> -->
-			<p>在坚硬的岁月里，写一首绵软的诗</p>
+			<p>在坚硬的岁月里，写一首绵软的诗。</p>
 		</div>
 		<h1>联系我们</h1>
 		<div class="msg clearfix">
@@ -43,24 +43,24 @@
 		<h1 class="guanzhu">关注我们</h1>
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 	</div>
-	<!-- bottom_nav begin -->
-	<div class="bottom_nav">
-		<a href="./index.html">首页</a> ｜ 
-		<a href="./article_list.html">往期回顾</a> ｜ 
-		<a href="./college.html">大学生专栏</a> ｜ 
-		<a href="./about.html">关于我们</a> ｜ 
-		<a href="./message.html">留言板</a>
-	</div>
-	<!-- bottom_nav end -->
 	<!-- footer begin -->
 	<div class="footer">
+		<!-- bottom_nav begin -->
+		<div class="bottom_nav">
+			<a href="./index.html">首页</a> ｜ 
+			<a href="./article_list.html">往期回顾</a> ｜ 
+			<a href="./college.html">大学生专栏</a> ｜ 
+			<a href="./about.html">关于我们</a> ｜ 
+			<a href="./message.html">留言板</a>
+		</div>
+		<!-- bottom_nav end -->
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
 	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
-	<div class="weixin"><a href="./guanzhu.html"><img src="./images/weixin.png" alt=""></a></div>
+	<div class="weixin"><a href="./guanzhu.html" target="_blank"><img src="./images/weixin.png" alt=""></a></div>
 
 	<script src="./js/totop.js"></script>
 	<script src="./js/bdtj.js"></script>
