--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="banner">
 		<div class="b-img">
 			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
-				<p class="text"><a href="http://mp.weixin.qq.com/s/kV59muE1fWLXVAlyGm1IrQ" target="_blank">最近更新:《这本书永远都读不完》</a></p>
+				<p class="text"><a href="http://mp.weixin.qq.com/s/yfk8hJCTaDnqEjG5WBrvTw" target="_blank">最近更新:《不再仰望星空》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
 				<p class="text"><a href="./college.html" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
@@ -106,25 +106,19 @@
 		</div>
 	</div>
 	<!-- cont-box end -->
-	<!-- bottom_nav begin -->
-	<div class="bottom_nav">
-		<a href="./index.html">首页</a> ｜ 
-		<a href="./article_list.html">往期回顾</a> ｜ 
-		<a href="./college.html">大学生专栏</a> ｜ 
-		<a href="./about.html">关于我们</a> ｜ 
-		<a href="./message.html">留言板</a> ｜ 
-		<a href="http://www.tuling123.com/static/talk/?a=12187%2FbrhR&u=fae01ba1bbfe70131668b038db670691" target="_blank">客服小二</a>
-		<!-- <div class="friend_link">
-			友情公众号：<a href="http://mp.weixin.qq.com/s/kEtEO1l4QBK-VetMXsgrTw">草心阁</a>  |  
-			友情公众号：<a href="javascript:;">友情1</a>  |  
-			<a href="javascript:;">友情2</a>  |  
-			<a href="javascript:;">友情3</a>  |   
-			<a href="./about.html">联系合作</a>
-		</div> -->
-	</div>
-	<!-- bottom_nav end -->
+	
 	<!-- footer begin -->
 	<div class="footer">
+		<!-- bottom_nav begin -->
+		<div class="bottom_nav">
+			<a href="./index.html">首页</a> ｜ 
+			<a href="./article_list.html">往期回顾</a> ｜ 
+			<a href="./college.html">大学生专栏</a> ｜ 
+			<a href="./about.html">关于我们</a> ｜ 
+			<a href="./message.html">留言板</a> ｜ 
+			<a href="http://www.tuling123.com/static/talk/?a=12187%2FbrhR&u=fae01ba1bbfe70131668b038db670691" target="_blank">客服小二</a>
+		</div>
+		<!-- bottom_nav end -->
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
