--- a/message.html
+++ b/message.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>留言板</title>
+	<title>给我们留言</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 	<meta name="keywords" content="" />
@@ -59,17 +59,18 @@
 	<!-- hide_text begin -->
 	<div class="hide"></div>
 	<!-- hide_text end -->
-	<!-- bottom_nav begin -->
-	<div class="bottom_nav">
-		<a href="./index.html">首页</a> ｜ 
-		<a href="./article_list.html">往期回顾</a> ｜ 
-		<a href="./college.html">大学生专栏</a> ｜ 
-		<a href="./about.html">关于我们</a> ｜ 
-		<a href="./message.html">留言板</a>
-	</div>
-	<!-- bottom_nav end -->
+	
 	<!-- footer begin -->
 	<div class="footer">
+		<!-- bottom_nav begin -->
+		<div class="bottom_nav">
+			<a href="./index.html">首页</a> ｜ 
+			<a href="./article_list.html">往期回顾</a> ｜ 
+			<a href="./college.html">大学生专栏</a> ｜ 
+			<a href="./about.html">关于我们</a> ｜ 
+			<a href="./message.html">留言板</a>
+		</div>
+		<!-- bottom_nav end -->
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
