--- a/about.html
+++ b/about.html
@@ -40,8 +40,9 @@
 				<!-- <a class="dacheng btn btn-default" href="./guanzhu.html" target="_blank"> 点击获取平台二维码</a> -->
 			</div>
 		</div>
-		<h1 class="guanzhu">关注我们</h1>
+		<!-- <h1 class="guanzhu">关注我们</h1> -->
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
+		<p class="tip-text">微信扫一扫，关注我们</p>
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
