add new article56

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="banner">
 		<div class="b-img">
 			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
-				<p class="text"><a href="http://mp.weixin.qq.com/s/yfk8hJCTaDnqEjG5WBrvTw" target="_blank">最近更新:《不再仰望星空》</a></p>
+				<p class="text"><a href="http://mp.weixin.qq.com/s/y9HGs9suRQo5aJcaihr_xQ" target="_blank">最近更新:《有手，却不知如何碰你》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
 				<p class="text"><a href="./college.html" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
