--- a/college.html
+++ b/college.html
@@ -12,16 +12,15 @@
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<style>
 		body{
-			/*background: url(./images/college_bg.jpg) no-repeat 100% 100% !important;*/
 			background: #fff;
 		}
 		.header-cont{
 			width:1000px;
 		}
 		.box{
-			padding:30px 0;
+			padding:10px 0;
 			width:100%;
-			background: url(./images/college_bg.jpg) no-repeat 100% 100%;
+			/*background: url(./images/college_bg.jpg) no-repeat 100% 100%;*/
 			background-size: cover;
 		}
 		.cont{
@@ -29,7 +28,6 @@
 			width:1000px;
 			min-height: 650px;
 			color:#999;
-			color:#fff;
 			text-align: center;
 			word-spacing: 200px;
 		}
@@ -37,14 +35,14 @@
 			margin-bottom:50px;
 		}
 		.cont .zhengji{
-			margin-top:120px;
+			margin-top:66px;
 			margin-bottom:50px;
 			font-size: 60px;
 			letter-spacing: 32px;
+			color:#888;
 		}
 		.cont .title{
-			color:#999;
-			color:#fff;
+			color:#888;
 			font-size:40px;
 			margin-bottom:10px;
 		}
@@ -53,13 +51,10 @@
 			margin:0 auto;
 			margin-bottom: 50px;
 			font-size:32px;
-			color:#fff;
-			/*text-align: left;*/
 		}
 		.cont .text{
-			font-size:40px;
-			color:#ff8c69;
-			color:#fff;
+			font-size:32px;
+			color:#999;
 		}
 		.cont .person{
 			margin:0 auto;
@@ -75,9 +70,8 @@
 			border:none;
 		}
 		.cont .dongdong{
-			margin-bottom:120px;
+			margin-bottom:66px;
 			color:#999;
-			color:#fff;
 			font-size:18px;
 		}
 	</style>
