del about page weixin icon

--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@
 	<div class="content">
 		<h1>“还读我诗”团队</h1>
 		<div class="about">
-			<!-- <p>一群正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p> -->
 			<p>在坚硬的岁月里，写一首绵软的诗。</p>
 		</div>
 		<h1>联系我们</h1>
@@ -37,10 +36,8 @@
 				<p>公号网址：<a href="http://www.huandoo.cn" target="_blank">www.huandoo.cn</a></p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>个人微信：Whia2021</p>
-				<!-- <a class="dacheng btn btn-default" href="./guanzhu.html" target="_blank"> 点击获取平台二维码</a> -->
 			</div>
 		</div>
-		<!-- <h1 class="guanzhu">关注我们</h1> -->
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 		<p class="tip-text">微信扫一扫，关注我们</p>
 	</div>
@@ -61,7 +58,7 @@
 	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
-	<div class="weixin"><a href="./guanzhu.html" target="_blank"><img src="./images/weixin.png" alt=""></a></div>
+	<!-- <div class="weixin"><a href="./guanzhu.html" target="_blank"><img src="./images/weixin.png" alt=""></a></div> -->
 
 	<script src="./js/totop.js"></script>
 	<script src="./js/bdtj.js"></script>
