--- a/college.html
+++ b/college.html
@@ -94,9 +94,8 @@
 	</div>
 	<div class="box">
 		<div class="cont">
-			<!-- <p class="zhengji">作品征集中</p> -->
-			<p class="zhengji">“稿”事情啦</p>
-			<p class="title">投稿须知</p>
+			<p class="zhengji">“稿”事情啦!</p>
+			<p class="title">大学生文学作品征集</p>
 			<p class="tiaojian">稿件要求：主题、观点灵活鲜明，诗歌散文，小说等体裁皆可玩转，"稿"事情非你不可。</p>
 			<p class="title">联系方式</p>
 			<p class="text">huanduwoshi2016@126.com(投稿邮箱)</p>
