--- a/index.html
+++ b/index.html
@@ -129,5 +129,21 @@
 	<script src="./js/bdtj.js"></script>
 	<script src="./js/banner.js"></script>
 	<script src="./js/totop.js"></script>
+	<script>
+	$(document).ready(function() {
+        var explorer = navigator.userAgent;
+        var Agents = ["Android", "iPhone", "SymbianOS", "Windows Phone", "iPad", "iPod"];
+        var flag = true;
+        for (var i = 0; i < Agents.length; i++) {
+            if (explorer.indexOf(Agents[i]) > 0) {
+                flag = false;
+                break;
+            }
+        }
+        if (!flag) {
+            window.location.href = "./mobile/index.html";//手机
+        }
+    });
+	</script>
 </body>
 </html>
