change mobile page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -87,12 +87,13 @@
 		.tellyou{
 			padding:10px 15px;
 			color:#ff8967;
-			font-size:16px;
+			font-size:12px;
 			text-align: center;
 		}
 		.copy{
 			padding-top:0;
 			color:#333;
+			font-size:16px;
 		}
 	</style>
 </head>
@@ -125,7 +126,7 @@
 				touch: true, //是否支持触屏滑动
 				directionNav: false, //箭头
 				animation: "slide", 
-				controlNav: true, //nav list
+				controlNav: false, //nav list
 				animationLoop: true,
 				pauseOnHover:false //zanting
     		}); 
