add mobile page erweima

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -95,6 +95,19 @@
 			color:#333;
 			font-size:16px;
 		}
+		.add .img-box{
+			margin:0 auto;
+			width:220px;
+			height:220px;
+		}
+		.add .img-box img{
+			width:100%;
+		}
+		.add .tip-text{
+			font-size:14px;
+			color:#999;
+			text-align: center;
+		}
 	</style>
 </head>
 <body>
@@ -196,6 +209,11 @@
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/-wO98IFBK40UYcx4Yn-vWw">多像沉寂后静静的海面 <span>｜ 周长风</span></a></div>
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/NgoiPf1tiMnQOTSK4f_43w">蒲公英 <span>｜ 靓丽人生</span></a></div>
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/6g5-Tn-rBbnWoan2hY91eg">阿依阔勒 <span>｜ 还读我诗</span></a></div>
+	</div>
+	<h2 class="title">来了给个关注再走呗😊</h2>
+	<div class="add">
+		<div class="img-box"><img src="../images/erweima.jpg" alt=""></div>
+		<p class="tip-text">长按二维码，关注我们</p>
 	</div>
 	<div class="tellyou">声明：所有原创权利归作者所有！<br>如若引用和转载，请务必先与 还读我诗平台 或作者联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
