--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>欢迎来到还读我诗，大学生征稿活动开始啦</title>
+	<title>在坚硬的岁月里，写一首绵软的诗</title>
 	<meta http-equiv="Cache-Control" content="no-transform">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -173,7 +173,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <marquee behavior="" direction="" scrollamount="3">在坚硬的岁月里，写一首绵软的诗。喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
+       <marquee behavior="" direction="" scrollamount="3">大学生征稿活动开始啦!喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
