change mobile page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,6 +16,12 @@
 			margin:0;
 			padding:0;
 		}
+		body{
+    		-webkit-user-select:none;
+    		-moz-user-select:none;
+    		-ms-user-select:none;
+    		user-select:none;
+		}
 		.clearfix:after{
 			content:'.'; 
 			display:block;
@@ -173,7 +179,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <marquee behavior="" direction="" scrollamount="3">大学生征稿活动开始啦!喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
+       <marquee behavior="" direction="" scrollamount="3">大学生征稿活动开始啦！详情请咨询平台。喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
