--- a/mobile/index.html
+++ b/mobile/index.html
@@ -179,7 +179,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <marquee behavior="" direction="" scrollamount="3">大学生征稿活动开始啦！详情请咨询平台。喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
+       <marquee behavior="" direction="" scrollamount="3">大学生征稿活动开始啦！详情请咨询平台负责人。喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
@@ -252,7 +252,7 @@
 		<p class="tip-text">微信扫一扫，关注我们</p>
 		<p class="tip-text">或者微信搜索公众号：还读我诗</p>
 	</div>
-	<div class="tellyou">声明：所有原创权利归作者所有！<br>如若引用和转载，请务必先与 还读我诗平台 或作者联系！</div>
+	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用和转载，请务必先与作者或 还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
 	
 
