--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="banner">
 		<div class="b-img">
 			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
-				<p class="text"><a href="http://mp.weixin.qq.com/s/9K9NNx1ARfeUMjWSV1ddlg" target="_blank">最近更新:《绿豆冰糕》</a></p>
+				<p class="text"><a href="http://mp.weixin.qq.com/s/GRO4HLg0c6nMyxNhyXYiwQ" target="_blank">最近更新:《愿你恋爱时，仍旧一少年》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
 				<p class="text"><a href="./college.html" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
