--- a/mobile/index.html
+++ b/mobile/index.html
@@ -183,6 +183,7 @@
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
+		<div class="article-list"><a href="http://mp.weixin.qq.com/s/GRO4HLg0c6nMyxNhyXYiwQ">愿你恋爱时，仍旧一少年 <span>｜ 呆呆</span></a></div>
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/9K9NNx1ARfeUMjWSV1ddlg">绿豆冰糕 <span>｜ 屈月</span></a></div>
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/y9HGs9suRQo5aJcaihr_xQ">有手，却不知如何碰你 <span>｜ 靓丽人生</span></a></div>
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/yfk8hJCTaDnqEjG5WBrvTw">不再仰望星空 <span>｜ 禾火</span></a></div>
