--- a/mobile/index.html
+++ b/mobile/index.html
@@ -88,6 +88,7 @@
 		}
 		.scrolltext{
 			margin:0 20px;
+			color:#ff8c69;
 		}
 		.title{
 			font-size:28px;
@@ -140,10 +141,18 @@
 			color:#999;
 			text-align: center;
 		}
+		.totop{
+			width:300px;
+			margin:0 auto;
+		}
+		.totop a{
+			display:block;
+			width:100%;
+		}
 	</style>
 </head>
 <body>
-	<div class="header clearfix">
+	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">www.huandoo.cn</p>
 		<a class="btn btn-success" href="#add">＋关注</a>
@@ -252,6 +261,9 @@
 		<div class="img-box"><img src="../images/erweima.jpg" alt=""></div>
 		<p class="tip-text">微信扫一扫，关注我们</p>
 		<p class="tip-text">或者微信搜索公众号：还读我诗</p>
+	</div>
+	<div class="totop">
+		<a class="btn btn-primary" href="#header">关注好了，继续欣赏</a>
 	</div>
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用和转载，请务必先与作者或 还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
