change mobile message page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -154,7 +154,7 @@
 <body>
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
-		<p class="website">www.huandoo.cn</p>
+		<!-- <p class="website">www.huandoo.cn</p> -->
 		<a class="btn btn-primary" href="./message.html">留言板</a>
 		<a class="btn btn-success" href="#add">＋关注</a>
 	</div>
