--- a/mobile/message.html
+++ b/mobile/message.html
@@ -16,7 +16,7 @@
 	</style>
 </head>
 <body>
-	<h2>悄悄告诉你，留言区风里雨里等你留下芳踪噢：</h2>
+	<h2>悄悄说出你的想法：</h2>
 	<div class="message-box">
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
