--- a/message.html
+++ b/message.html
@@ -28,12 +28,12 @@
 			color:#666;
 			font-weight:normal;
 		}
-		/*.hide{
+		.hide{
 			width:100%;
 			height:20px;
 			margin-top:-20px;
 			background: #AAB2B8;
-		}*/
+		}
 	</style>
 </head>
 <body>
@@ -57,7 +57,7 @@
 		<!-- UY END -->
 	</div>
 	<!-- hide_text begin -->
-	<!-- <div class="hide"></div> -->
+	<div class="hide"></div>
 	<!-- hide_text end -->
 	
 	<!-- footer begin -->
