--- a/mobile/message.html
+++ b/mobile/message.html
@@ -35,6 +35,7 @@
 			overflow: hidden;
 			margin-right:100px;
 			margin-bottom:10px;
+			border-bottom:1px solid #999;
 		}
 		.header>.logo{
 			float:left;
@@ -61,13 +62,10 @@
 			margin-bottom:20px;
 			color:#666;
 			font-size:20px;
-			text-indent:20px;
+			text-indent:15px;
 		}
-		.hide{
-			width:100%;
-			height:30px;
-			margin-top:-30px;
-			background: #AAB2B8;
+		.message-box{
+			margin:0 15px;
 		}
 	</style>
 </head>
@@ -75,7 +73,7 @@
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">www.huandoo.cn</p>
-		<a class="btn btn-success" href="#add">关注我们</a>
+		<a class="btn btn-success" href="./index.html/#add">关注我们</a>
 	</div>
 	<h2>悄悄说出你的想法：</h2>
 	<div class="message-box">
