--- a/mobile/message.html
+++ b/mobile/message.html
@@ -50,7 +50,7 @@
 			font-size:20px;
 			color:#999;
 			text-align: center;
-			text-indent: 5px;
+			text-indent: 8px;
 		}
 		.header .btn {
 			float:right;
@@ -72,8 +72,9 @@
 <body>
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
-		<p class="website">www.huandoo.cn</p>
-		<a class="btn btn-success" href="./index.html#add">关注我们</a>
+		<p class="website">huandoo.cn</p>
+		<a class="btn btn-primary" href="./index.html">返回</a>
+		<a class="btn btn-success" href="./index.html#add">＋关注</a>
 	</div>
 	<h2>悄悄说出你的想法：</h2>
 	<div class="message-box">
