change mobile messgae

--- a/message.html
+++ b/message.html
@@ -57,7 +57,7 @@
 		<!-- UY END -->
 	</div>
 	<!-- hide_text begin -->
-	<div class="hide"></div>
+	<!-- <div class="hide"></div> -->
 	<!-- hide_text end -->
 	
 	<!-- footer begin -->
