--- a/mobile/message.html
+++ b/mobile/message.html
@@ -35,7 +35,7 @@
 			overflow: hidden;
 			margin-right:100px;
 			margin-bottom:10px;
-			border-bottom:1px solid #999;
+			border-bottom:1px solid #eee;
 		}
 		.header>.logo{
 			float:left;
