change mobile page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -36,10 +36,13 @@
 			margin-top:10px;
 		}
 		.header{
+			position:fixed;
+			top:0;
+			left:0;
 			height:60px;
 			width:100%;
 			overflow: hidden;
-			margin-right:100px;
+			/*margin-right:100px;*/
 		}
 		.header>.logo{
 			float:left;
