--- a/mobile/message.html
+++ b/mobile/message.html
@@ -30,10 +30,13 @@
 			zoom:1;
 		}
 		.header{
+			position:fixed;
+			top:0;
+			left:0;
 			height:60px;
 			width:100%;
 			overflow: hidden;
-			margin-right:100px;
+			/*margin-right:100px;*/
 			margin-bottom:10px;
 			border-bottom:1px solid #eee;
 		}
