change mobile page

--- a/mobile/message.html
+++ b/mobile/message.html
@@ -30,9 +30,6 @@
 			zoom:1;
 		}
 		.header{
-			position:fixed;
-			top:0;
-			left:0;
 			height:60px;
 			width:100%;
 			overflow: hidden;
@@ -83,10 +80,14 @@
 	<div class="message-box">
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
-		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
 		<!-- UY END -->
 	</div>
-	<div class="hide"></div>
+	<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
+	<script type="text/javascript">
+		var uyan_config = {
+     		'du':'http://www.huandoo.cn'
+		};
+	</script>
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 </body>
 </html>
