--- a/message.html
+++ b/message.html
@@ -53,9 +53,14 @@
 		<h1>悄悄告诉你，留言区风里雨里等你留下芳踪噢：</h1>
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
-		<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
 		<!-- UY END -->
 	</div>
+	<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
+	<script type="text/javascript">
+		var uyan_config = {
+     		'du':'http://www.huandoo.cn'
+		};
+	</script>
 	<!-- hide_text begin -->
 	<!-- <div class="hide"></div> -->
 	<!-- hide_text end -->
