--- a/mobile/message.html
+++ b/mobile/message.html
@@ -73,7 +73,7 @@
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">huandoo.cn</p>
-		<a class="btn btn-primary" href="./index.html">返回</a>
+		<a class="btn btn-primary" href="./index.html">首页</a>
 		<a class="btn btn-success" href="./index.html#add">＋关注</a>
 	</div>
 	<h2>悄悄说出你的想法：</h2>
