--- a/mobile/index.html
+++ b/mobile/index.html
@@ -264,7 +264,7 @@
 		<p class="tip-text">或者微信搜索公众号：还读我诗</p>
 	</div>
 	<div class="totop">
-		<a class="btn btn-primary" href="#header">关注好了，继续欣赏</a>
+		<a class="btn btn-primary" href="#header">关注好了，返回欣赏</a>
 	</div>
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用和转载，请务必先与作者或 还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
