--- a/mobile/message.html
+++ b/mobile/message.html
@@ -59,10 +59,9 @@
 			vertical-align: middle;
 		}
 		h2{
-			margin-bottom:20px;
+			margin:20px 15px;
 			color:#666;
 			font-size:20px;
-			text-indent:15px;
 		}
 		.message-box{
 			margin:0 15px;
@@ -77,7 +76,7 @@
 		<a class="btn btn-primary" href="./index.html">首页</a>
 		<!-- <a class="btn btn-success" href="./index.html#add">＋关注</a> -->
 	</div>
-	<h2>悄悄说出你的想法：</h2>
+	<h2>悄悄说出你的想法 ღ：</h2>
 	<div class="message-box">
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
