change mobile page

--- a/mobile/message.html
+++ b/mobile/message.html
@@ -60,8 +60,11 @@
 		}
 		h2{
 			margin:20px 15px;
+			margin-top:0;
 			color:#666;
 			font-size:20px;
+			line-height: 50px;
+			border-bottom:1px solid #ff8967;
 		}
 		.message-box{
 			margin:0 15px;
@@ -76,7 +79,7 @@
 		<a class="btn btn-primary" href="./index.html">首页</a>
 		<!-- <a class="btn btn-success" href="./index.html#add">＋关注</a> -->
 	</div>
-	<h2>悄悄说出你的想法 ღ：</h2>
+	<h2>悄悄在留言区留下您的芳踪噢 ღ：</h2>
 	<div class="message-box">
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
