mobile add bdtj.js

--- a/mobile/message.html
+++ b/mobile/message.html
@@ -88,5 +88,6 @@
 	</div>
 	
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<script src="../js/bdtj.js"></script>
 </body>
 </html>
