--- a/mobile/index.html
+++ b/mobile/index.html
@@ -269,6 +269,7 @@
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用和转载，请务必先与作者或 还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
 	
+	<script src="../js/bdtj.js"></script>
 
 </body>
 </html>
