--- a/mobile/index.html
+++ b/mobile/index.html
@@ -35,6 +35,9 @@
 		.mt10{
 			margin-top:10px;
 		}
+		.mr5{
+			margin-right:5px;
+		}
 		.header{
 			height:60px;
 			width:100%;
@@ -156,7 +159,7 @@
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">huandoo.cn</p>
 		<a class="btn btn-primary" href="./message.html">留言板</a>
-		<a class="btn btn-success" href="#add">＋关注</a>
+		<a class="btn btn-success mr5" href="#add">＋关注</a>
 	</div>
 	
 	<!-- slide begin -->
@@ -264,7 +267,7 @@
 		<p class="tip-text">或者微信搜索公众号：还读我诗</p>
 	</div>
 	<div class="totop">
-		<a class="btn btn-primary" href="#header">关注好了，返回欣赏</a>
+		<a class="btn btn-primary" href="#header">返回欣赏</a>
 	</div>
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用和转载，请务必先与作者或 还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
