--- a/mobile/message.html
+++ b/mobile/message.html
@@ -75,7 +75,7 @@
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">huandoo.cn</p>
-		<a class="btn btn-default" href="javascript:void(0)" onclick="location.reload()">刷新</a>
+		<!-- <a class="btn btn-default" href="javascript:void(0)" onclick="location.reload()">刷新</a> -->
 		<a class="btn btn-primary" href="./index.html">首页</a>
 		<!-- <a class="btn btn-success" href="./index.html#add">＋关注</a> -->
 	</div>
