change mobile page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -192,7 +192,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <marquee behavior="" direction="" scrollamount="3">大学生征稿活动开始啦！详情请咨询平台负责人。喜欢文字的朋友们，欢迎加入还读我诗大家庭，等你来！</marquee> 
+       <marquee behavior="" direction="" scrollamount="3">大公主，你觉得滚动字幕这里放些什么文案好呢？</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
@@ -265,6 +265,7 @@
 		<div class="img-box"><img src="../images/erweima.jpg" alt=""></div>
 		<p class="tip-text">微信扫一扫，关注我们</p>
 		<p class="tip-text">或者微信搜索公众号：还读我诗</p>
+		<p class="tip-text">或者长按保存→微信的扫一扫→右上角从相册选取</p>
 	</div>
 	<div class="totop">
 		<a class="btn btn-primary" href="#header">返回欣赏</a>
