--- a/mobile/message.html
+++ b/mobile/message.html
@@ -76,7 +76,7 @@
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">huandoo.cn</p>
 		<!-- <a class="btn btn-default" href="javascript:void(0)" onclick="location.reload()">刷新</a> -->
-		<a class="btn btn-primary" href="./index.html">首页</a>
+		<a class="btn btn-default" href="./index.html">往期回顾</a>
 		<!-- <a class="btn btn-success" href="./index.html#add">＋关注</a> -->
 	</div>
 	<h2>悄悄在留言区留下您的芳踪噢 ღ：</h2>
