--- a/mobile/index.html
+++ b/mobile/index.html
@@ -9,6 +9,7 @@
 	<meta name="renderer" content="webkit">
 	<link href="https://cdn.bootcss.com/flexslider/2.6.4/flexslider.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://cdn.bootcss.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="https://cdn.bootcss.com/flexslider/2.6.4/jquery.flexslider.min.js"></script>
 	<style>
@@ -90,13 +91,29 @@
 			background: rgba(0,0,0,.6);
 		}
 		.scrolltext{
+			position:relative;
 			margin:0 20px;
+			color:#333;
+		}
+		.scrolltext .icon{
+			display:block;
+			position: absolute;
+			top:0;
+			left:0;
+			background:#fff;
+			font-size:20px;
 			color:#ff8c69;
+		}
+		.scrolltext .text{
+			margin-left:20px;
 		}
 		.title{
 			font-size:28px;
 			color:#666;
 			text-align: center;
+		}
+		.title .fa{
+			color:#fc6a96;
 		}
 		.list-cont .article-list{
 			display:block;
@@ -192,7 +209,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <marquee behavior="" direction="" scrollamount="3">大公主，你觉得滚动字幕这里放些什么文案好呢？</marquee> 
+       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大公主，你觉得滚动字幕这里放些什么文案好呢？</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
@@ -260,7 +277,7 @@
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/NgoiPf1tiMnQOTSK4f_43w">蒲公英 <span>｜ 靓丽人生</span></a></div>
 		<div class="article-list"><a href="http://mp.weixin.qq.com/s/6g5-Tn-rBbnWoan2hY91eg">阿依阔勒 <span>｜ 还读我诗</span></a></div>
 	</div>
-	<h2 class="title">来了给个关注再走呗😊</h2>
+	<h2 class="title">来了给个关注再走呗 <i class="fa fa-heart"></i></h2>
 	<div class="add" id="add">
 		<div class="img-box"><img src="../images/erweima.jpg" alt=""></div>
 		<p class="tip-text">微信扫一扫，关注我们</p>
