--- a/mobile/index.html
+++ b/mobile/index.html
@@ -169,6 +169,53 @@
 			display:block;
 			width:100%;
 		}
+		@media screen and (min-width:768px){
+			.header{
+				padding:0 60px;
+			}
+			.list-cont .article-list{
+				padding:0 76px;
+				/*text-align: center;*/
+			}
+			.flexslider{
+				margin-bottom:5px;
+			}
+			.flexslider .slides{
+				height:420px;
+			}
+			.flexslider .slides li{
+				position:relative;
+			}
+			.flexslider .slides li>img{
+				height:420px;
+			}
+			.flexslider .slides li .banner-text{
+				position:absolute;
+				left:0;
+				bottom:-10px;
+				height:80px;
+				width:100%;
+				line-height: 80px;
+				font-size:26px;
+				color:#fff;
+				text-align: center;
+				background: rgba(0,0,0,.6);
+			}
+		}
+		@media screen and (min-width:1024px){
+			.flexslider{
+				margin-bottom:5px;
+			}
+			.flexslider .slides{
+				height:620px;
+			}
+			.flexslider .slides li{
+				position:relative;
+			}
+			.flexslider .slides li>img{
+				height:620px;
+			}
+		}
 	</style>
 </head>
 <body>
