--- a/mobile/message.html
+++ b/mobile/message.html
@@ -69,6 +69,17 @@
 		.message-box{
 			margin:0 15px;
 		}
+		@media screen and (min-width:768px){
+			.header{
+				padding:0 60px;
+			}
+			h2{
+				margin:20px 76px;
+			}
+			.message-box{
+				padding:0 76px;
+			}
+		}
 	</style>
 </head>
 <body>
