change mobile page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -256,7 +256,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大公主，你觉得滚动字幕这里放些什么文案好呢？</marquee> 
+       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大学生征稿活动开始啦！详情咨询平台负责人</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div class="list-cont">
